@@ -12,6 +12,8 @@ documents those changes that are of interest to users and admins.
  -- Fix sview for calling a cray system from a non-cray system to get the
     correct geometry of the system.
  -- BLUEGENE - fix to correctly import pervious version of block state file.
+ -- BLUEGENE - handle loading better when doing a clean start with static
+    blocks.
 
 * Changes in SLURM 2.3.0.rc2
 ============================
